First API Tested

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Master Stroke</string>
+    <string name="transText">At ONDC our vision is to create an open network that connects buyers.</string>
 </resources>
