First API Tested

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,69 @@
 <resources>
     <string name="app_name">Master Stroke</string>
     <string name="transText">At ONDC our vision is to create an open network that connects buyers.</string>
+    <string name="complete_list">Complete list</string>
+    <string name="address">By Address</string>
+    <string name="boothName">By Booth</string>
+    <string name="names">By Name</string>
+    <string name="by_voter_id_no">By Voter Id No</string>
+    <string name="by_house_no">By House No</string>
+    <string name="by_family">By Family</string>
+    <string name="by_age">By Age</string>
+    <string name="by_language">By Language</string>
+    <string name="by_religions">By Religion</string>
+    <string name="last_names">By Last Name</string>
+    <string name="sexs">By Sex</string>
+    <string name="obile_no_lists">By Mobile No List</string>
+    <string name="search">Search</string>
+    <string name="list">List</string>
+    <string name="surveyss">Survey</string>
+    <string name="chartsmao">Charts</string>
+    <string name="erssss">Others</string>
+    <string name="survey">Survey</string>
+    <string name="export_survey">Export Survey</string>
+    <string name="import_surveyss">Import Survey</string>
+    <string name="upcomingVoters">Upcoming Voters</string>
+    <string name="viewVoted">View Voted</string>
+    <string name="clear_voted_marking">Clear Voted Marking</string>
+    <string name="party_workers">Party Workers</string>
+    <string name="headOfFamily">Head of Family</string>
+    <string name="ourPartySupporters">Our Party Supporters</string>
+    <string name="studen">Students</string>
+    <string name="locatedVoters">Relocated Voters</string>
+    <string name="whatsForward">Whatsapp Message Forward</string>
+    <string name="tele_calling_facility">Tele Calling Facility</string>
+    <string name="today_birthday_all">Today Birthday (All)</string>
+    <string name="today_anniversary_all">Today Anniversary (All)</string>
+    <string name="tomorrow_birthday_all">Tomorrow Birthday (All)</string>
+    <string name="tomorrow_anniversary_all">Tomorrow Anniversary (All)</string>
+    <string name="today_birthday_part_wise">Today Birthday (Part Wise)</string>
+    <string name="today_anniversary_part_wise">Today Anniversary (Part Wise)</string>
+    <string name="tomorrow_birthday_part_wise">Tomorrow Birthday (Part Wise)</string>
+    <string name="tomorrow_anniversary_part_wise">Tomorrow Anniversary (Part Wise)</string>
+    <string name="party_surveys">Party Surveys</string>
+    <string name="dead">Dead</string>
+    <string name="choose_any_language">Choose Any Language</string>
+    <string name="wish_happy_birthday">Wish Happy Birthday!</string>
+    <string name="wish_anniversary">Wish Anniversary!</string>
+    <string name="slip">Slip</string>
+    <string name="print">Print</string>
+    <string name="language">Language :</string>
+    <string name="residential_status">Residential Status :</string>
+    <string name="head_of_the_family">Head of The Family :</string>
+    <string name="party_worker">Party Worker?</string>
+    <string name="other">Other</string>
+    <string name="call">Call</string>
+    <string name="list_page">List Page</string>
+    <string name="other_options">Other Options</string>
+    <string name="partySurveys">Party Surveys</string>
+    <string name="add_people">Add People</string>
+    <string name="students">Students</string>
+    <string name="languages">Language</string>
+    <string name="bengali">Bengali</string>
+    <string name="hindi">Hindi</string>
+    <string name="urdu">Urdu</string>
+    <string name="present">Present</string>
+    <string name="relocated">Relocated</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
 </resources>
