--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,4 +66,5 @@
     <string name="relocated">Relocated</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
+    <string name="by_hindu_caste">By Hindu Caste</string>
 </resources>
