--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,4 +68,5 @@
     <string name="no">No</string>
     <string name="by_hindu_caste">By Hindu Caste</string>
     <string name="merged_last_names">Merged Last Names</string>
+    <string name="by_age_partwise">By Age (PartWise)</string>
 </resources>
