--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,4 +73,5 @@
     <string name="scrutiny">Scrutiny</string>
     <string name="voter_slip">Voter Slip</string>
     <string name="updates">Updates</string>
+    <string name="voter_list">Voter List</string>
 </resources>
